Complete 29-2 (Shape interface)

--- a/Skillbox 29/Skillbox 2/src/CMakeLists.txt
+++ b/Skillbox 29/Skillbox 2/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
 
 
-add_executable(Skillbox_2 main.cpp)
+add_executable(Skillbox_2 main.cpp Circle.cpp Triangle.cpp Rectangle.cpp)
 target_include_directories(Skillbox_2 PUBLIC ${MY_VAR})
