--- a/Skillbox 31/Skillbox_1/CMakeLists.txt
+++ b/Skillbox 31/Skillbox_1/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
 project(Skillbox_1)
 
-set(MY_VAR ${CMAKE_SOURCE_DIR}/header)
 set(CMAKE_CXX_STANDARD 14)
-
-add_subdirectory(src)
+add_executable(Skillbox_1 main.cpp)
