--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ cmake*/
 *.log
 *.ninja
 *.obj
+Skillbox 37/Skillbox 2/build-Skillbox_2-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Skillbox_2_autogen/timestamp
