--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,6 @@ cmake*/
 *.log
 *.ninja
 *.obj
-Skillbox 37/Skillbox 2/build-Skillbox_2-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Skillbox_2_autogen/timestamp
+Skillbox 37/Skillbox 2/build-Skillbox_2-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/
+*.user
+Skillbox 37/Skillbox 2/Skillbox_2/qml.qrc
