Practice with MediaPlayer

--- a/Skillbox 34/Practice2/CMakeLists.txt
+++ b/Skillbox 34/Practice2/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
 project(Practice2)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
@@ -12,6 +12,8 @@ find_package(Qt5 COMPONENTS
         Core
         Gui
         Widgets
+        Multimedia
+        MultimediaWidgets
         REQUIRED)
 
 add_executable(Practice2 main.cpp)
@@ -19,6 +21,8 @@ target_link_libraries(Practice2
         Qt5::Core
         Qt5::Gui
         Qt5::Widgets
+        Qt5::MultimediaWidgets
+        Qt5::Multimedia
         )
 
 if (WIN32)
