--- a/search_engine/manage/config.json
+++ b/search_engine/manage/config.json
@@ -5,7 +5,7 @@
     "max_responses": 5
   },
   "files": [
-    "../resources/file001.txt",
-    "../resources/file002.txt"
+    "C:\\Users\\ailyi\\CLionProjects\\Skillbox\\search_engine\\resources\\file001.txt",
+    "C:\\Users\\ailyi\\CLionProjects\\Skillbox\\search_engine\\resources\\file002.txt"
   ]
 }
