--- a/search_engine/CMakeLists.txt
+++ b/search_engine/CMakeLists.txt
@@ -12,6 +12,4 @@ add_subdirectory(src)
 target_link_libraries(search_engine PRIVATE nlohmann_json::nlohmann_json)
 
 
-
-
-
+add_subdirectory(googleTest)
