add tests for converterJSON class

--- a/search_engine/manage/config.json
+++ b/search_engine/manage/config.json
@@ -6,6 +6,7 @@
   },
   "files": [
     "C:\\Users\\ailyi\\CLionProjects\\Skillbox\\search_engine\\resources\\file001.txt",
-    "C:\\Users\\ailyi\\CLionProjects\\Skillbox\\search_engine\\resources\\file002.txt"
+    "C:\\Users\\ailyi\\CLionProjects\\Skillbox\\search_engine\\resources\\file002.txt",
+    "C:\\Users\\ailyi\\CLionProjects\\Skillbox\\search_engine\\resources\\test.txt"
   ]
 }
