--- a/search_engine/src/CMakeLists.txt
+++ b/search_engine/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
 
-add_executable(search_engine main.cpp ConverterJSON.cpp fs_exception.cpp)
+add_executable(search_engine main.cpp ConverterJSON.cpp fs_exception.cpp InvertredIndex.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${MY_VAR})
